[gd_scene load_steps=5 format=2]

[ext_resource path="res://furniture/placement/layoout_editor.gd" type="Script" id=1]
[ext_resource path="res://rooms/test_camera.gd" type="Script" id=2]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.054902, 1, 0.247059, 1 )

[sub_resource type="CubeMesh" id=1]
material = SubResource( 2 )
size = Vector3( 20, 0.1, 20 )
subdivide_width = 5
subdivide_height = 4
subdivide_depth = 5

[node name="layoout_editor" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 20, 0 )
script = ExtResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 20, 0 )

[node name="ground" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = null

[node name="p" type="Panel" parent="."]
anchor_bottom = 1.0

[node name="v" type="VBoxContainer" parent="p"]
margin_right = 40.0
margin_bottom = 40.0

[node name="new_layout" type="Button" parent="p/v"]
margin_right = 144.0
margin_bottom = 20.0
text = "New layout"

[node name="new_door" type="Button" parent="p/v"]
margin_top = 24.0
margin_right = 144.0
margin_bottom = 44.0
text = "New Door"

[node name="new_window" type="Button" parent="p/v"]
margin_top = 48.0
margin_right = 144.0
margin_bottom = 68.0
text = "New Window"

[node name="h" type="HBoxContainer" parent="p/v"]
margin_top = 72.0
margin_right = 144.0
margin_bottom = 96.0

[node name="Label" type="Label" parent="p/v/h"]
margin_top = 5.0
margin_right = 82.0
margin_bottom = 19.0
text = "Layout name"

[node name="LineEdit" type="LineEdit" parent="p/v/h"]
margin_left = 86.0
margin_right = 144.0
margin_bottom = 24.0
size_flags_horizontal = 3
expand_to_text_length = true

